feat: project structure

--- a/src/index.html
+++ b/src/index.html
@@ -9,13 +9,13 @@
     <title>Tela Login</title>
 </head>
 <body class="bg-slate-200">
-    <main class="w-full min-h-screen flex">
-        <section>
-
+    <main class="w-full min-h-screen flex flex-col md:flex-row items-center justify-center mx-auto">
+        <section class="w-full flex-1">
+            ITEM 1
         </section>
 
-        <section>
-
+        <section class="hidden md:flex w-full flex-1">
+            ITEM 2
         </section>
     </main>
 </body>
